changes made to the footer element

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>Hi! this is Oswell, I live in Accra, Ghana. Contact me for all your MS Excel problems.</p>
         </main>
         <footer>
-            <p> &copy;2024 | Oswell Paintsil | Accra, Ghana </p>
+            <p> &copy;2024 | Oswell Paintsil | Ghana </p>
         </footer>
     </body>
 </html>
