week02 improved home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Oswell Paintsil | WDD 130</title>
+        <meta name="description" content="Oswell Paintsil, WDD 130: Web Fundamentals, Learning how to create and style home page">
+        <meta name="author" content="Oswell Paintsil">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -19,6 +21,11 @@
             <img src="images/profile.webp" alt="Oswell Paintsil" width="200">
             <p>Hi! this is Oswell, I live in Accra, Ghana. Contact me for all your MS Excel problems.</p>
         </main>
+        <aside>
+            <h2>Accra</h2>
+            <img src="images/accra-map.webp" alt="map of accra">
+            <p>Accra, the capital of Ghana, is a lively coastal city known for its rich culture, historic sites, and bustling markets. It serves as the country’s political, economic, and cultural hub.</p>
+        </aside>
         <footer>
             <p> &copy;2024 | Oswell Paintsil | Ghana </p>
         </footer>
