--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/feed/">Linkedin</a>
+                <a href="https://web.facebook.com/profile.php?id=100011183957900">Facebook</a>
             </nav>
         </header>
         <main>
             <h1>Oswell Paintsil | WDD 130</h1>
             <img src="images/profile.webp" alt="Oswell Paintsil" width="200">
-            <p>Hi! this is Oswell, I live in Accra, Ghana. Contact me for all your MS Excel problems.</p>
+            <p>
+                A driven and ambitious student at BYU Pathway Worldwide, currently pursuing a degree in Web Development. My deep passion for technology fuels my commitment to creating innovative, user-centric websites and applications that enhance online experiences. I possess a certificate in project management, equipping me with exceptional organizational and leadership skills, allowing me to effectively manage projects from inception to completion. As an Excel pro, I excel at data analysis and process automation, delivering insightful, data-driven solutions that optimize efficiency and drive results. My strong problem-solving abilities, keen attention to detail, and relentless pursuit of excellence ensure that I consistently deliver high-quality work. I thrive in collaborative environments, where I embrace challenges and leverage my adaptability to learn new technologies quickly. With a forward-thinking mindset and a commitment to continuous growth, I am eager to contribute my skills in web development and project management to make a meaningful impact in the tech industry.
+            <ul class="box">
+                <li><a href="https://churchofjesuschristtemples.org/accra-ghana-temple/" target="_blank">Accra Ghana Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/bountiful-utah-temple/" target="_blank">Bountiful Utah Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/nairobi-kenya-temple/" target="_blank">Nairobi Kenya Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Accra</h2>
             <img src="images/accra-map.webp" alt="map of accra">
             <p>Accra, the capital of Ghana, is a lively coastal city known for its rich culture, historic sites, and bustling markets. It serves as the country’s political, economic, and cultural hub.</p>
@@ -30,4 +38,5 @@
             <p> &copy;2024 | Oswell Paintsil | Ghana </p>
         </footer>
     </body>
+    <!--Last modified: 01/10/2024-->
 </html>
