--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About Us page of my white water rafting site">
+    <meta name="Author" content="Oswell Paintsil">
     <title>Oswell Paintsil | W03 Rafting Project: About Us Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
