corrections after submission

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     <title>Oswell Paintsil | W03 Rafting Project: About Us Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
     <main>
         <div class="hero">
             <img src="images/hero.webp" alt="picture">
-            <h1>White Water Rafting</h1>
+            <h1>Life Adventures Rafting</h1>
             <article>
                 <img src="images/happy-employee.webp" alt="happy-employee">
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
