--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,10 +15,10 @@
     <header>
         <img src="images/logo.jpg" alt="logo">
         <nav>
-            <a href="index.html">Home</a>
+            <a href="">Home</a>
             <a href="#">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="">Trips</a>
+            <a href="">Contact Us</a>
         </nav>
     </header>
     <main>
