Client wireframe modified

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,18 +46,42 @@
                 </p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo facilis eligendi expedita harum rem optio necessitatibus exercitationem in omnis saepe consequuntur, tenetur quo dolorem ipsam laudantium natus perspiciatis mollitia inventore! Odio dolor rem natus repudiandae nihil dolorem quibusdam eveniet incidunt iste ipsum non ipsa recusandae unde nulla architecto fugiat illum doloribus nam, minus sequi doloremque maiores quo magni! Reiciendis dolorem doloribus quod expedita eum omnis qui natus tempore maxime! Perferendis debitis saepe accusamus quibusdam. Pariatur est, praesentium numquam sunt, molestiae iure laboriosam ipsam voluptatibus vitae, quisquam minima quae consectetur quaerat ullam nemo rem earum nesciunt! Aut expedita quibusdam eaque. Tempora.</p>
-            
+        <section class="history">
+            <h2>History<span><img src="images/history.webp" alt="history"></span></h2>
+            <p>Life Adventures Rafting began as a small passion project, driven by a love for outdoor exploration and the thrill of white-water rafting. 
+                Our journey started with a few close friends navigating local rivers, but it quickly grew into something bigger. 
+                Inspired by the beauty of nature and the excitement of adventure, we decided to share this experience with others.
+                Over the years, Life Adventures Rafting has evolved into a full-fledged adventure company, 
+                offering unforgettable rafting experiences to thrill-seekers and nature lovers alike. We pride ourselves on providing safe, 
+                guided rafting trips across some of the most breathtaking rivers and landscapes. Whether you're a beginner or an experienced rafter, 
+                we are here to help you embark on an unforgettable journey.
+                Join us, and let’s create life-changing adventures together!
+            </p>
         </section>
-        <section>
+        <section class="Adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting-image-1.webp" alt="rafting-image-1">
-            <img src="images/rafting-image-2.webp" alt="rafting-image-2">
-            <img src="images/rafting-image-3.webp" alt="rafting-image-3">
-            <img src="images/rafting-image-4.webp" alt="rafting-image-4">
-            <img src="images/rafting-image-5.webp" alt="rafting-image-5">
+            <div>
+                <figure>
+                    <img src="images/rafting-image-1.webp" alt="rafting-image-1">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-image-2.webp" alt="rafting-image-2">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-image-3.webp" alt="rafting-image-3">
+                    <figcaption> Araefua Carr Fame</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-image-4.webp" alt="rafting-image-4">
+                    <figcaption>Kobby Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting-image-5.webp" alt="rafting-image-5">
+                    <figcaption>Assor Ride to the Future</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
