changed reference style

--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -6,7 +6,7 @@
     <title>W05: Course Home - Quiz Form</title>
     <meta name="author" content="Oswell Paintsil">
     <meta name="description" content="online quiz about HTML and CSS with at least four (4) questions about HTML and/or CSS">
-    <link rel="stylesheet" href="/styles/quiz.css">
+    <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
     <h1>HTML & CSS Test Questions</h1>
