--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Us page of my life adventures rafting site">
     <meta name="author" content="Oswell Paintsil">
-    <title>Oswell Paintsil | W05 Rafting Project: Contact Us Page</title>
+    <title>Life Adventures Rafting Co. Ltd | W05 Rafting Project: Contact Us Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
