--- a/wwr/about.html
+++ b/wwr/about.html
@@ -85,7 +85,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;2024 | White Water Rafting | Oswell Paintsil</p>
+        <p>&copy;2024 | Life Adventures Rafting | Oswell Paintsil</p>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
             <a href="https://Twitter.com"><img src="images/twitter.webp" alt="Twitter"></a>
